--- a/rettvu2024/src/components/Home/Home.css
+++ b/rettvu2024/src/components/Home/Home.css
@@ -12,3 +12,36 @@
     height: 100%;
     object-fit: cover;
 }
+
+.Speakers{
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat( 5, 1fr );
+    gap: 30px;
+    margin: 0 auto;
+}
+
+.Speakers_item{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
+
+.Speakers_item > .Speakers_item_img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    aspect-ratio: 1/1;
+    width: 100%;
+}
+
+.Speakers_item > .Speakers_item_img > img{
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
