--- a/rettvu2024/src/components/Home/Home.css
+++ b/rettvu2024/src/components/Home/Home.css
@@ -14,14 +14,6 @@
 }
 
 
-
-
-
-
-
-
-
-
 /* ----------------------program--------------------- */
 .program {
     width: 1155px;
@@ -111,13 +103,44 @@
     list-style-type: square;
 }
 
+.Speakers{
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat( 5, 1fr );
+    gap: 30px;
+    margin: 0 auto;
+}
 
+.Speakers_item{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
+
+.Speakers_item > .Speakers_item_img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    aspect-ratio: 1/1;
+    width: 100%;
+}
+
+.Speakers_item > .Speakers_item_img > img{
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
 
 
 
 .schedule {
     width: 100%;
-   
+    font-size: 1.1rem;
     line-height: 1.5;
     text-align: justify;
     padding: 20px;
