--- a/rettvu2024/src/App.css
+++ b/rettvu2024/src/App.css
@@ -32,7 +32,12 @@ html {
 .Banner {
   display: flex;
   background-color: white;
-  height: 50px;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(0, 24, 66);
+  gap: 10px;
 }
 
 .Content {
@@ -42,8 +47,4 @@ html {
 
 .App{
   position: relative;
-}
-
-.Footer{
-
 }
