--- a/rettvu2024/src/components/Header/Header.css
+++ b/rettvu2024/src/components/Header/Header.css
@@ -31,9 +31,10 @@
     align-items: center;
     justify-content: center;
     color: white;
-    padding: 0 30px;
-    font-weight: 600;
+    padding: 0 25px;
+    font-weight: 500;
     font-size: 16px;
+    border: 4px solid transparent;
 }
 
 .Header-link:hover{
@@ -44,4 +45,59 @@
 .Heade-active{
     background-color: rgb(255, 153, 0);
     color: rgb(0, 24, 66);
+}
+
+.Header-tab{
+    position: relative;
+    height: 100%;
+    cursor: pointer;
+}
+
+.Header-tab_child{
+    position: absolute;
+    background-color: white;
+    top: 70px;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.2s;
+    transition-delay: 0.1s;
+    width: 200px;
+    z-index: 99;
+    box-shadow: 0px 0px 10px #00000033;
+}
+
+.Header-tab_child::before{
+    position: absolute;
+    top: -3px;
+    left: 20px;
+    content: "";
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    transform: rotate(45deg);
+    z-index: -1;
+}
+
+.Header-tab:hover .Header-tab_child{
+    visibility: visible;
+    opacity: 1;
+}
+
+.Header-tab_child a{
+    color: black;
+    display: flex;
+    text-align: left;
+    justify-content: flex-start;
+    padding: 13px 15px;
+    border-bottom: 1px solid rgba(170, 170, 170, 0.263);
+}
+
+.Header-group{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.Heade-group-active{
+    border-bottom: 4px solid rgb(255, 153, 0);
 }
