--- a/rettvu2024/src/App.css
+++ b/rettvu2024/src/App.css
@@ -48,3 +48,11 @@ html {
 .App{
   position: relative;
 }
+
+.list_Slide_img{
+  background-color: black;
+}
+.list_Slide_img.Slide-img img {
+  
+  height: 1000px !important;
+}
