--- a/rettvu2024/src/components/Committee/Committee.css
+++ b/rettvu2024/src/components/Committee/Committee.css
@@ -20,45 +20,64 @@
 .Slide-img {
     margin-bottom: 30px;
     /* object-fit: cover; */
-
+    
 }
 
 .Committee_item {
-    margin    : 0;
-    padding   : 0;
-    box-sizing: border-box;
+    margin-bottom: 40px;
 }
 
 .Committee_item>p {
     white-space : pre-line;
-    padding-left: 40px;
+    padding-left: 30px;
     margin      : 10px 10px;
     font-size   : 1.1rem;
 }
 
 .Committee_item div p {
-    padding-left: 40px;
+    padding-left: 30px;
     margin      : 10px 10px;
     font-size   : 1.1rem;
 }
 
 .Committee_item>h2 {
-    color           : black;
+    color           : rgb(0, 58, 159);
     font-family     : Montserrat;
     /* background-color: #374f8a; */
-    border-left     : 1.2rem solid #f7961e;
-    padding         : 1rem 1.6rem;
+    padding         : 1rem 10px 1rem 1.6rem;
     font-weight     : 700;
     font-size       : 1.2rem;
     text-align      : left;
     text-transform  : capitalize;
+    position: relative;
+    width: fit-content;
+    margin-bottom: 20px;
 }
 
-.Committee_right div h2 {
+.Committee_item>h2::after{
+    content: "";
+    height: 2.5px;
+    width: 100%;
+    background-color: #f7961e;
+    position: absolute;
+    left: 1.6rem;
+    bottom: 0;
+}
+
+.Committee_item>h2::before{
+    content: "";
+    height: 10px;
+    width: 10px;
+    background-color: #f7961e;
+    position: absolute;
+    right: -1.6rem;
+    bottom: -4px;
+    transform: rotate(45deg);
+}
+
+/* .Committee_right div h2 {
     width           : 100%;
     color           : #fff;
-    font-family     : Montserrat;
-    /* background-color: #374f8a; */
     border-left     : 1.6rem solid #f7961e;
     padding         : 1rem 1.6rem;
     font-weight     : 700;
@@ -71,9 +90,8 @@
     padding-left: 40px;
     margin      : 10px 10px;
     font-size   : 1.1rem;
-}
+} */
 
-.Committee_item {
-    margin-bottom: 30px;
+.Committee_item > p > a{
+    color: rgb(0, 73, 200);
 }
-
