--- a/rettvu2024/src/components/Committee/Committee.css
+++ b/rettvu2024/src/components/Committee/Committee.css
@@ -46,7 +46,7 @@
     /* background-color: #374f8a; */
     padding         : 1rem 10px 1rem 1.6rem;
     font-weight     : 700;
-    font-size       : 1.2rem;
+    font-size       : 22px;
     text-align      : left;
     text-transform  : capitalize;
     position: relative;
