--- a/rettvu2024/src/components/About/About.css
+++ b/rettvu2024/src/components/About/About.css
@@ -198,3 +198,16 @@
     margin-left: 20px;
     list-style-type: square;
 }
+
+
+
+
+
+
+/*                    modify                             */
+.modify_underline {
+    text-decoration: line-through;
+    color: #c0b7b7;
+    font-size: 18px;
+    font-weight: 500;
+}
