--- a/rettvu2024/src/components/Committee/Committee.css
+++ b/rettvu2024/src/components/Committee/Committee.css
@@ -15,12 +15,12 @@
 
 .Committee_left {
     flex: 1;
+    width: 100%;
 }
 
 .Slide-img {
     margin-bottom: 30px;
-    /* object-fit: cover; */
-    
+    /* object-fit: cover; */ 
 }
 
 .Committee_item {
