--- a/rettvu2024/src/components/About/About.css
+++ b/rettvu2024/src/components/About/About.css
@@ -198,3 +198,29 @@
     margin-left: 20px;
     list-style-type: square;
 }
+
+.Slide-img{
+    height: 600px !important;
+}
+
+.Banner_bottom{
+    position: absolute;
+    font-size: 30px;
+    color: #000;
+    text-align: right;
+    width: 100%;
+    height: 100%;
+
+}
+
+.Slide {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.Banner_bottom{
+    position: absolute;
+    top: 0;
+    z-index: 10;
+}
