--- a/rettvu2024/src/App.css
+++ b/rettvu2024/src/App.css
@@ -70,13 +70,15 @@ html {
 }
 .List_Slide_stital {
   position: absolute;
-  top: 30%;
+  bottom: 30px;
   text-align: center;
   font-weight: bold;
-  font-size: 30px;
-  color: bisque;
+  font-size: 22px;
+  color: white;
+  line-height: 1.5;
   z-index: 6;
   width: 100%;
+
 }
 .List_Slide_overplay {
   width: 100%;
@@ -85,7 +87,7 @@ html {
   bottom: 0;
   left: 0;
   display: block;
-  background-image: linear-gradient(to top,rgba(0, 0, 0, 0.57), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to top,rgba(88, 46, 46, 0.433), rgba(0, 0, 0, 0));
   z-index: 5;
 }
 .Slide-img {
@@ -95,8 +97,18 @@ html {
   height: 100%;
 }
 
+
+
+
+
+/* ---------------------chỉnh Carousel------------------------------------- */
 .List_Slide_img {
   width: 100%;
   height: 500px;
   object-fit: cover;
+}
+/* ---------------------chỉnh Carousel------------------------------------- */
+
+.modify_color_red {
+  color:yellow
 }
