--- a/rettvu2024/src/components/Footer/Footer.css
+++ b/rettvu2024/src/components/Footer/Footer.css
@@ -7,4 +7,11 @@
     color: white;
     height: 220px;
     gap: 10px;
+    padding: 0 30px;
+    text-align: center;
+}
+
+.Footer_info{
+    display: flex;
+    gap: 8px;
 }
