--- a/rettvu2024/src/components/Travel/TravelInformation.css
+++ b/rettvu2024/src/components/Travel/TravelInformation.css
@@ -7,10 +7,10 @@
     align-items    : flex-start;
 }
 
-img{
+/* img{
     width:100%;
     padding: 10px 0;
-}
+} */
 
 .TravelInformation_right {
     width   : 400px;
