--- a/rettvu2024/src/Responsive.css
+++ b/rettvu2024/src/Responsive.css
@@ -37,8 +37,8 @@
         padding: 0 20px;
     }
 
-    .List_Slide_img {
-        height: 340px !important;
+    .Slide_video_fr{
+        height: 350px !important;
     }
 
     .program {
