--- a/rettvu2024/src/components/Slider/Slider.css
+++ b/rettvu2024/src/components/Slider/Slider.css
@@ -2,15 +2,12 @@
     background-color: black;
 }
 
-.list_Slide_img.Slide-img img {
+.list_Slide_img .Slide-img img {
     display: block;
     width: 100%;
     object-fit: cover;
     height: 100%;
 }
-
-
-
 
 /* ---------------------------------------- */
 .List_Slide {
@@ -20,7 +17,7 @@
 
 .List_Slide_stital {
     position: absolute;
-    bottom: 50px;
+    bottom: 40px;
     text-align: center;
     font-weight: bold;
     font-size: 22px;
@@ -32,6 +29,7 @@
 
 .List_Slide_stital ul {
     list-style: none !important;
+    text-shadow: 2px 2px 5px #00000080;
 }
 
 .List_Slide_overplay {
@@ -41,26 +39,20 @@
     bottom: 0;
     left: 0;
     display: block;
-    background-image: linear-gradient(to top, rgba(0, 25, 153, 0.426), rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.555), rgba(0, 0, 0, 0));
     z-index: 5;
 }
 
-.Slide-img {
-    height: 500px;
+/* Thay đổi kích thước Carousel ở đây */
+.Slide_video_fr{
+    height: 450px;
+    position: relative;
 }
 
-.Slide-img img {
+.Slide_video_fr > img, video{
+    display: block;
     height: 100%;
-}
-
-
-
-
-
-/* ---------------------chỉnh Carousel------------------------------------- */
-.List_Slide_img {
     width: 100%;
-    height: 400px;
     object-fit: cover;
 }
 
