--- a/rettvu2024/src/components/Slider/Slider.css
+++ b/rettvu2024/src/components/Slider/Slider.css
@@ -58,6 +58,16 @@
 
 /* ---------------------chỉnh Carousel------------------------------------- */
 
-.modify_color_red {
+.modify_color_yellow {
     color: yellow
 }
+
+.modify_color_red {
+    color: white;
+    background-color: rgba(255, 0, 0, 0.734);
+    width: fit-content;
+    margin: 0 auto;
+    padding: 0 20px;
+    margin-bottom: 5px;
+}
+
