--- a/rettvu2024/src/components/Footer/Footer.css
+++ b/rettvu2024/src/components/Footer/Footer.css
@@ -5,10 +5,10 @@
     flex-direction: column;
     background-color: rgb(0, 36, 98);
     color: white;
-    height: 220px;
     gap: 10px;
-    padding: 0 30px;
+    padding: 25px 30px;
     text-align: center;
+    border-top: 4px solid #f7961e;;
 }
 
 .Footer_info{
