--- a/rettvu2024/src/components/Travel/TravelInformation.css
+++ b/rettvu2024/src/components/Travel/TravelInformation.css
@@ -132,20 +132,84 @@
 
 /* Contact */
 
+
+.Contact_left{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.contact_item>h2 {
+    color: rgb(0, 58, 159);
+    font-family: Montserrat;
+    background-color: rgba(224, 224, 224, 0.449);
+    padding: 14px 10px 14px 20px;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: left;
+    text-transform: capitalize;
+    position: relative;
+    width: 100%;
+    
+    border-left: 5px solid #f7961e;
+}
 .Contact-Card{
     display: flex;
     flex-direction: column;
     gap: 15px;
-    padding: 10px; 
+    padding: 20px 30px; 
     background-color: #eaeaea;
-    width: 30%;
+    height: 100%;
 }
+.Contact_right{
+    /* flex: 2; */
+    height: 100%;
+    flex: 1;
+}
+.contact_item {
+    width: 50%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+   justify-content: space-between;
+   gap: 10px;
+   
+}
+
+
 .Contact-Card-item{
+    flex: 1;
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.Contact-Card-item > p{
-    padding: 0;
+.Contact-Card  p{
+    padding: 0 !important;
+    
+}
+
+.ContactUs {
+    display: flex;
+    gap: 20px;
+    padding:  30px 40px;
+    padding-bottom: 0;
+}
+
+.contact_image {
+    gap: 1;
+    height: 100%;
+    
+}
+
+
+.contact_image img {
+    /* display: block; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+   
 }
