--- a/rettvu2024/src/App.css
+++ b/rettvu2024/src/App.css
@@ -50,3 +50,13 @@ html {
   position: relative;
 }
 
+.scroll-to-top-button{
+  cursor: pointer;
+  display: flex;
+  padding: 10px;
+  background-color: rgb(0, 52, 141);
+  color: white;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
