--- a/rettvu2024/src/components/About/About.css
+++ b/rettvu2024/src/components/About/About.css
@@ -51,6 +51,19 @@
     object-fit: cover;
 }
 
+.About_image > span{
+    display: flex;
+    color: rgb(104, 113, 118);
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 10px auto;
+    font-style: italic;
+}
+
 .About_Important_Date {
     display: flex;
     flex-direction: column;
@@ -148,6 +161,7 @@
     overflow: hidden;
     aspect-ratio: 1/1;
     width: 100%;
+    position: relative;
 }
 
 .Speakers_item>.Speakers_item_img>img {
@@ -156,7 +170,6 @@
     width: 100%;
     height: 100%;
 }
-
 
 
 
