--- a/rettvu2024/src/components/Committee/Committee.css
+++ b/rettvu2024/src/components/Committee/Committee.css
@@ -28,7 +28,7 @@
     width: 100%;
 }
 
-.Committee_item>p {
+.Committee_item > p {
     white-space : pre-line;
     padding-left: 30px;
     margin      : 10px 10px;
@@ -56,8 +56,29 @@
     padding-left: 30px;
 }
 
+.Committee_right .Committee_item > p, .TravelInformation_right .Committee_item > p {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: fit-content;
+    gap: 15px;
+}
 
+.Committee_right .Committee_item > p > i, .TravelInformation_right .Committee_item > p > i {
+    opacity: 0;
+    color: rgb(0, 58, 159);
+    font-size: 15px;
+    transition: 0.1s;
+}
 
+.Committee_right .Committee_item > p:hover > i{
+    opacity: 1;
+}
+
+.TravelInformation_right .Committee_item > p:hover > i{
+    opacity: 1;
+}
 
 
 
