--- a/rettvu2024/src/components/Committee/Committee.css
+++ b/rettvu2024/src/components/Committee/Committee.css
@@ -84,7 +84,7 @@
 
 
 .Committee_item>h2 {
-    color           : rgb(0, 58, 159);
+    color           : #07223C;
     font-family     : Montserrat;
     background-color: rgba(224, 224, 224, 0.449);
     padding         : 14px 10px 14px 20px;
