--- a/rettvu2024/src/components/Header/Header.css
+++ b/rettvu2024/src/components/Header/Header.css
@@ -7,7 +7,7 @@
     position: sticky;
     top: 0;
     z-index: 99;
-    background-color: rgb(0, 36, 98);
+    background-color: #07223C;
     gap: 30px;
 }
 
