--- a/rettvu2024/src/components/About/About.css
+++ b/rettvu2024/src/components/About/About.css
@@ -28,7 +28,7 @@
 }
 
 .About_content_topics h2, .About_content_text h2 {
-    color: rgb(0, 58, 159);
+    color: #07223C;
     font-size: 22px;
     margin-bottom: 10px;
 }
@@ -77,7 +77,7 @@
 .About_Important_Date h1 {
     padding: 5px;
     text-align: center;
-    color: rgb(0, 58, 159);
+    color: #07223C;
     margin-bottom: 20px;
 }
 
@@ -110,7 +110,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    color: rgb(0, 58, 159);
+    color: #07223C;
     gap: 10px;
 }
 
@@ -142,7 +142,7 @@
 .Speakers_tital h1 {
     padding: 5px;
     text-align: center;
-    color: rgb(0, 58, 159);
+    color: #07223C;
 }
 
 .Speakers_item {
@@ -177,7 +177,7 @@
 .Submission_Guideline_tital h1 {
     padding: 5px;
     text-align: center;
-    color: rgb(0, 58, 159);
+    color: #07223C;
 }
 
 .Submission_Guideline {
