--- a/rettvu2024/src/App.css
+++ b/rettvu2024/src/App.css
@@ -36,7 +36,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(0, 24, 66);
+  color: #07223C;
   gap: 10px;
   text-align: center;
 }
