--- a/rettvu2024/src/components/Committee/Committee.css
+++ b/rettvu2024/src/components/Committee/Committee.css
@@ -95,7 +95,7 @@
     position: relative;
     width: 100%;
     margin-bottom: 20px;
-    border-left: 5px solid #f7961e;
+    border-left: 5px solid #ffde17;
 }
 
 /* .Committee_item>h2::after{
