--- a/rettvu2024/src/components/Slider/Slider.css
+++ b/rettvu2024/src/components/Slider/Slider.css
@@ -59,7 +59,7 @@
 /* ---------------------chỉnh Carousel------------------------------------- */
 
 .modify_color_yellow {
-    color: yellow;
+    color: #ffde17;
 }
 
 .modify_color_red {
